--- a/webgl/tsconfig.json
+++ b/webgl/tsconfig.json
@@ -1,4 +1,4 @@
 {
-    "compilerOptions": { "target": "es2020" },
-    "files": ["webgl_utils.ts"]
+    "compilerOptions": { "target": "es6" },
+    "files": ["webgl_utils.ts", "matrix_utils.ts", "01_HelloWebGL.ts"]
 }
